LKPR-72: External S3 bucket key auto rotation
